# ai-advert-2025

./: .cursorignore  .editorconfig  .gitignore  README.md  gradle.properties
day-12-regoose/: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  iteration_results.json  iteration_test_10x.py  optimized_results.json  optimized_test_10x.py  pyproject.toml  requirements.txt  simple_deepseek_test.py  test_cli_validation.py  test_deepseek.py  test_git_patch.ps1  test_git_patch.py  test_optimization.py
day-12-regoose/examples/: fibonacci.py
day-12-regoose/experiments/: llm_params_research.py
day-12-regoose/memory-bank/: activeContext.md  architecture.md  improvement-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
day-12-regoose/regoose/: __init__.py  cli.py  cli_old.py
day-12-regoose/scripts/: demo.py  install_mcp.py
day-12-regoose/test_demo/: hello_world_measurements.md  performance_comparison.md  sample.py.backup.1  sample.py.backup.3  sample.py.backup.6  sample_no_docs.py  sample_no_docs.py.backup  token_optimization_comparison.md
day-12-regoose/test_improvement/: sample.py.backup.1  sample.py.backup.2  sample.py.backup.4  sample.py.backup.6
day-12-regoose/test_sample_project/: calculator.py  calculator.py.backup.1  calculator.py.backup.3  calculator.py.backup.5  calculator.py.backup.7  data_processor.py  data_processor.py.backup  data_processor.py.backup.1  data_processor.py.backup.3  user_manager.py  user_manager.py.backup  user_manager.py.backup.1
day-12-regoose/test_simple/: sample.py  (+4 more)
(+256 files in other folders)
