[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regoose"
version = "0.1.0"
description = "AI-powered test generation agent inspired by Goose architecture"
authors = [{name = "AI Assistant", email = "assistant@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.51.0",
    "pydantic>=2.5.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "mcp>=1.0.0",
    "pytest>=8.0.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "ast-decompiler>=0.7.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "python-on-whales>=0.71.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.scripts]
regoose = "regoose.cli:app"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
